# pre-commit-hooks

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
hooks/: sqlformat_inplace.py
popdaily_pre_commit_hooks/: sqlformat_inplace.py
