[metadata]
name = popdaily_pre_commit_hooks
description = Custom pre-commit-hooks for Popdaily
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/popdaily/pre-commit-hooks
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    sqlparse>=0.4.1
python_requires = >=3.7

[options.entry_points]
console_scripts =
    sqlformat-inplace = popdaily_pre_commit_hooks.sqlformat_inplace:main

[bdist_wheel]
universal = True
